# azure-sphere-gallery

./: .gitignore  .gitmodules  README.md
AzureEventGrid/: .clang-format  CMakeLists.txt  README.md  app_manifest.json  eventgrid_config.h  exitcodes.h  launch.vs.json  main.c  mqtt_connection.c  mqtt_connection.h  options.c  options.h
AzureEventGrid/script/: validate_manifest.ps1
AzureSphereSquirrel/HLCore/: CMakeLists.txt  README.md  app_manifest.json  curl_logs.cpp  debug.cpp  json.h  launch.vs.json  pretty_print.cpp  pretty_print.h  squirrel_cpp_helper.h  test.nut
BalancingRobot/: README.md  (+1 more)
BalancingRobot/Software/HighLevelApp/: CMakeLists.txt  CMakeSettings.json  GetDeviceHash.c  GetDeviceHash.h  README.md  SSD1306_Icons.h  app_manifest.json  curldefs.h  i2c_oled.c  i2c_oled.h  intercore.c  intercore.h  launch.vs.json  main.c  utils.c  utils.h
BalancingRobot/Software/HighLevelApp/MutableStorageKVP/: MutableStorageKVP.c
BalancingRobot/Software/HighLevelApp/UdpDebugLog/: udplog.c  udplog.h
BalancingRobot/Software/RTOS/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  linker.ld
BalancingRobot/Software/RTOS/rtos_app/: FanOut.c  FanOut.h  PID_v1.c  PID_v1.h  VL53L1X.c  VL53L1X.h  VL53L1X_defines.h  i2c.c  i2c.h  rtcoremain.c  rtos_app.c  tx_initialize_low_level.S  utils.c  utils.h
CO2_MonitorHealthySpaces/src/: .clang-format  CMakeLists.txt  CMakeSettings.json  app_exit_codes.h  app_manifest.json  azsphere_board.txt  co2_sensor.c  co2_sensor.h  launch.vs.json  main.c  main.h
CO2_MonitorHealthySpaces/src/Onboard/: azure_status.c  azure_status.h  onboard_sensors.c  onboard_sensors.h
DRAMClickboard/DRAMClickboard_HighLevelApp/: CMakeLists.txt  README.md  app_manifest.json  dram.c  dram.h  main.c
EAP-TLS_Solution/EAP-TLS Client/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  app_manifest.json  applibs_versions.h  main.c
EAP-TLS_Solution/EAP-TLS Client/lib/: _environment_config.h  eap_tls_lib.c  eap_tls_lib.h  web_api_client.c  web_api_client.h
EAP-TLS_Solution/EAP-TLS Client/tests/: tests.c  tests.h
EncryptedStorage/: CMakeLists.txt  README.md  main.c
EncryptedStorage/EncryptedStorage/: README.md  app_manifest.json  main.c
HTTPS_MutualAuth/Azsphere/: CMakeCache.txt  CMakeLists.txt  app_manifest.json  deploy.sh  launch.vs.json  main.c
HTTPS_MutualAuth/Azsphere/certs/: DEVICE-CERTS-HERE
HeapTracker/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  heap_tracker_lib.c  heap_tracker_lib.h  main.c
IndustrialDeviceController/Software/HighLevelApp/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json
IndustrialDeviceController/Software/HighLevelApp/init/: adapter.c  device_hal.c  ipc.c  main.c  watchdog.c  watchdog.h
IndustrialDeviceController/Software/HighLevelApp/iot/: azure_iot_utilities.c  diag.c  iot.c
IndustrialDeviceController/Software/HighLevelApp/libutils/: event_loop_timer.c  led.c  llog.c  memory.c  network.c  property.c  timer.c  uart.c  utils.c
IndustrialDeviceController/Software/MT3620_IDC_RTApp/: CMakeLists.txt  README.md  Socket.c  app_manifest.json  ipc.h  launch.vs.json  main.c
IndustrialDeviceController/Software/MT3620_IDC_RTApp/lib/: ADC.c  ADC.h  CPUFreq.h  Common.h  GPIO.c  GPIO.h  GPT.c  GPT.h  I2CMaster.c  I2CMaster.h  I2S.c  I2S.h  LICENSE.txt  MAINTAINERS  MBox.c  MBox.h  NVIC.h  Platform.h  Print.c  Print.h  README.md  SPIMaster.c  SPIMaster.h  UART.c  UART.h  VectorTable.c  VectorTable.h  linker.ld
LittleFs_RemoteDisk/src/HighLevelApp/: CMakeLists.txt  app_manifest.json  constants.h  crypt.c  crypt.h  encrypted_storage.c  main.c  remoteDiskIO.c  remoteDiskIO.h
LittleFs_SDCard/src/AzureSphere/SDCard_HighLevelApp/: CMakeLists.txt  SDCardViaRtCore.c  SDCardViaRtCore.h  app_manifest.json  main.c  utils.c  utils.h
MQTT-C_Client/src/HighLevelApp/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  applibs_versions.h  comms_manager.c  comms_manager.h  main.c
PWMAudio/: .gitignore  CMakeLists.txt  CMakeWorkspaceSettings.json  README.md  app_manifest.json  launch.vs.json  main.c
RS485Driver/RTApp/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  linker.ld  main.c  ringBuffer.c  ringBuffer.h  rs485_driver.c  rs485_driver.h
RecipeUpdater/: .gitattributes  .gitignore  CMakeLists.txt  README.md  app_manifest.json
RecipeUpdater/certs/: README.md
RecipeUpdater/src/: CMakeLists.txt  main.c
RecipeUpdater/src/common/: CMakeLists.txt  azure_iot.c  cloud.c  cloud.h  connection_iot_hub.h  exitcodes.h  options_iot_hub.c  user_interface.c  user_interface.h
RecipeUpdater/web/: README.md  docker-compose.yml
RecipeUpdater/web/recipe-backend/: .gitignore  Dockerfile  app.py  example.env  requirements.txt
RecipeUpdater/web/recipe-frontend/: .eslintrc.js  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
Rust/rust/: .gitignore  Cargo.toml  README.md
Rust/rust/.cargo/: config
Rust/rust/azure-sphere/: Cargo.toml
Rust/rust/docs/: quickstart.md  relnotes.md  resources.md
Rust/rust/hardware/: Cargo.toml  build.rs  generate_hardware_include.py
SetTimeFromLocation/src/: CMakeLists.txt  app_manifest.json  location_from_ip.c  main.c  settime.c  settime.h
SimpleFileSystem_RemoteDisk/src/HighLevelApp/: CMakeLists.txt  app_manifest.json  curlFunctions.c  main.c  remoteDiskIO.c
TranslatorCognitiveServices/src/: CMakeLists.txt  app_manifest.json  main.c  translator.c  translator.h
VS1053AudioStreaming/src/: CMakeLists.txt  app_manifest.json  main.c
VS1053AudioStreaming/src/VS1053/: vs1053.c  vs1053.h
WiFiConfigurationViaNfc/src/: CMakeLists.txt  app_manifest.json  main.c  utils.c  utils.h
WiFiConfigurationViaNfc/src/M24SR/: M24SR.c  M24SR.h
WifiConfigurationViaAppResource/src/: AppResourceWiFiConfig.c  AppResourceWiFiConfig.h  CMakeLists.txt  WiFiConfig.json  app_manifest.json  main.c
WifiConfigurationViaUart/src/: CMakeLists.txt  CMakeSettings.json  SerialWiFiConfig.c  SerialWiFiConfig.h  app_manifest.json  main.c
(+681 files in other folders)
