[workspace]

members = [
    "Samples/allapis",
    "Samples/ADC/adc_high_level_app",
    "Samples/DHCP",
    "Samples/CertStore/cert_store_high_level_app",
    "Samples/CustomNTP/custom_ntp_high_level_app",
    "Samples/GPIO/gpio_high_level_app",
    "Samples/HelloWorld/hello_world_high_level_app"
]

default-members = [
    "Samples/allapis",
    "Samples/ADC/adc_high_level_app",
    "Samples/DHCP",
    "Samples/CertStore/cert_store_high_level_app",
    "Samples/CustomNTP/custom_ntp_high_level_app",
    "Samples/GPIO/gpio_high_level_app",
    "Samples/HelloWorld/hello_world_high_level_app"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
