[workspace]
resolver = "2"

members = [
    "samples/allapis",
    "samples/ADC/adc_high_level_app",
    "samples/DHCP",
    "samples/CertStore/cert_store_high_level_app",
    "samples/CustomNTP/custom_ntp_high_level_app",
    "samples/GPIO/gpio_high_level_app",
    "samples/HelloWorld/hello_world_high_level_app"
]

default-members = [
    "samples/allapis",
    "samples/ADC/adc_high_level_app",
    "samples/DHCP",
    "samples/CertStore/cert_store_high_level_app",
    "samples/CustomNTP/custom_ntp_high_level_app",
    "samples/GPIO/gpio_high_level_app",
    "samples/HelloWorld/hello_world_high_level_app"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
