[package]
name = "azure-sphere"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2021"

[dependencies]
azure-sphere-sys = { path = "./azure-sphere-sys", version = "0.1" }
libc = { version = "0.2", default-features = false }
memchr = { version = "2.5", default-features = false }
nullable-result = { version = "0.7", default-features = false }
bitmask-enum = { version = "2.0"}
curl = { git="https://github.com/BarryBo/curl-rust.git", branch="AzureSphere", version="0.4.44", features=["static-ssl"] }
chrono = "0.4.22"

[features]
std = []
