[package]
name = "dhcp_high_level_app"
version = "0.1.0"
authors = ["Microsoft"]
edition = "2021"

[dependencies]
azure-sphere = { path = "../../azure-sphere", version = "0.1" }
signal-hook = "0.3.14"
nullable-result = "0.7.0"
hardware = { path = "../../hardware"}
pnet = { version = "0.31.0", features = ["std"] }
